# month_2_exam/api/docs/swagger.yaml
@@ -145,12 +145,8 @@ definitions:
       total_price:
         type: number
     type: object
-  models.CreateComingTableProductInit:
+  models.CreateComingTableProductCount:
     properties:
-      barcode:
-        type: string
-      coming_table_id:
-        type: string
       count:
         type: integer
     type: object
@@ -615,17 +611,28 @@ paths:
       summary: LIST COMING TABLE PRODUCT
       tags:
       - COMING TABLE PRODUCT
+  /coming_product/{coming_table_id}:
     post:
       consumes:
       - application/json
       description: adds coming_product data to db based on given info in body
       parameters:
-      - description: coming_product data
+      - description: Coming Table ID
+        in: path
+        name: coming_table_id
+        required: true
+        type: string
+      - description: Barcode value
+        in: query
+        name: barcode
+        required: true
+        type: string
+      - description: coming_product count
         in: body
         name: data
         required: true
         schema:
-          $ref: '#/definitions/models.CreateComingTableProductInit'
+          $ref: '#/definitions/models.CreateComingTableProductCount'
       produces:
       - application/json
       responses:
